# syllabus-ai

./: README.md  docker-compose.yml  global.d.ts  next-i18next.config.js  next.config.js  package-lock.json  package.json
.github/workflows/: client.yml
api/: .env.example  .gitignore  Dockerfile  openapi.json  pyproject.toml
api/app/: main.py
api/app/db/: __init__.py  core.py
api/app/prompts/: __init__.py
api/app/routes/: api_router.py  auth_route.py  generation.py  generation_route.py  internal.py  internal_route.py  user_route.py
api/app/scripts/: generate_openapi.py
api/app/services/: auth_service.py  user_service.py
api/app/utils/: auth_dep.py  jwt.py  llm.py  logger.py  schema.py  settings.py
api/baml_client/: __init__.py  async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  tracing.py  type_builder.py  types.py
api/baml_src/: chapter.baml  chapters.baml  chat_chapter.baml  clients.baml  generators.baml
baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
client/: .dockerignore  .env.example  Dockerfile  README.md  global.d.ts  index.html  next-i18next.config.js  openapi-codegen.config.ts  orval.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  ProtectedRoute.tsx
scripts/: d.yml  generate_client_bindings.sh  generate_openapi.sh
src/components/: CardSkeleton.tsx  ChapterCard.tsx  ChapterSkeleton.tsx  MainNav.tsx  QuizForm.tsx  SiteFooter.tsx  SiteHeader.tsx  TaskSelector.tsx  ThemeToggle.tsx
src/pages/: _app.tsx  about.tsx  (+2 more)
(+109 files in other folders)
